welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
	do{
	if (isFacingTrail() == true)	{
		poseBrosse
		avance
		baisseBrosse
	}else{
		gauche()}
	}while(!estSurBiscuit)}
    // Write your code here


// Copy your isFacingTrail() here


def isFacingTrail():Boolean = {
	if (estFaceMur){
		return false
	}
	avance()
	var trace:Boolean = getCouleurSol() == Color.green;	
	recule()
	return trace
	
}        

